--- a/.github/workflows/workflow-call-context.yaml
+++ b/.github/workflows/workflow-call-context.yaml
@@ -84,6 +84,10 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           context: git
+          flavor: |
+            latest=false
+            prefix=
+            suffix=
           tags: |
             type=match,pattern=v(.*),group=1,value=v${{ steps.action-context.outputs.version }}
             type=match,pattern=v(\d.\d),group=1,value=v${{ steps.action-context.outputs.version }}
