--- a/.github/workflows/retention-policy.yaml
+++ b/.github/workflows/retention-policy.yaml
@@ -23,5 +23,11 @@ jobs:
       - uses: actions/delete-package-versions@v5
         with:
           package-name: ${{ steps.name.outputs.value }}
+          package-type: 'container'
+          delete-only-untagged-versions: true
+          min-versions-to-keep: 10
+      - uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ steps.name.outputs.value }}
           package-type: 'npm'
           min-versions-to-keep: 10
