--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -100,6 +100,8 @@ jobs:
       - context
       - ci
     uses: ./.github/workflows/workflow-call-build-container.yaml
+    permissions:
+      packages: write
     with:
       push: true
       platforms: linux/amd64,linux/arm64
