--- a/.github/workflows/workflow-call-context.yaml
+++ b/.github/workflows/workflow-call-context.yaml
@@ -92,7 +92,7 @@ jobs:
             type=match,pattern=v(.*),group=1,value=v${{ steps.action-context.outputs.version }}
             type=match,pattern=v(\d.\d),group=1,enable=${{ startsWith(steps.action-context.outputs.version, '0') == false && fromJSON(steps.action-context.outputs.prerelease) == false }},value=v${{ steps.action-context.outputs.version }}
             type=match,pattern=v(\d),group=1,enable=${{ startsWith(steps.action-context.outputs.version, '0') == false && fromJSON(steps.action-context.outputs.prerelease) == false }},value=v${{ steps.action-context.outputs.version }}
-            type=raw,value=latest,enable=${{ fromJSON(steps.action-context.outputs.latest) }}
+            type=raw,value=latest,enable=${{ fromJSON(steps.action-context.outputs.latest) && fromJSON(steps.action-context.outputs.prerelease) == false }}
       - id: node-version
         name: node-version
         shell: bash
