--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@escapace/pnpm-pack": "0.1.0",
-    "@eslint/eslintrc": "3.0.2",
-    "@eslint/js": "8.57.0",
     "@ls-lint/ls-lint": "2.2.3",
     "esbuild": "0.20.2",
-    "eslint": "8.57.0",
-    "eslint-config-escapace": "4.0.2",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.0.0",
+    "eslint-config-escapace": "4.1.5",
     "execa": "8.0.1",
     "fast-glob": "3.3.2",
     "fs-extra": "11.2.0",
@@ -29,8 +26,7 @@
     "prettier-config-escapace": "1.0.6",
     "semver": "7.6.0",
     "syncpack": "12.3.0",
-    "typescript": "5.4.4",
-    "typescript-eslint": "7.6.0"
+    "typescript": "5.4.4"
   },
   "engines": {
     "node": ">=20.12.0",
